crates/compiler/tests/parse_errors/unfinished_case.elm
module Main exposing (..)
x = case y of
